--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ Lider em soluções TI }}.</h2>
+<h3>{{ Prestamos serviços para as maiores empresas do mercado.}}</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
 
