--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,15 +6,15 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
-    <abbr title="Telefone">Tel:</abbr>
+    Empresa Palomo Soluções <br />
+    Rua do Uruguaio, 1337<br />
+    <abbr title="Telefone">Tel:+55 11 99666-1525</abbr>
     91010-1010
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@palomosolutions.com">Suporte@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@palomosolutions.com">Marketing@example.com</a>
 </address>
 
 {% endblock %}
